tests/cases/alloc_certificate/accept/fbip_allows_unbounded_stack.pr
fip fn wrap(x) = x

fbip fn relay(x) = wrap(relay(x))
