tests/cases/alloc_certificate/reject/fip_calls_fbip.pr
fip fn use_it(x) = helper(x)

fbip fn helper(x) = x
